--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,16 +14,68 @@
 <body>
   <nav>
     <h2>Preguntas</h2>
-    <div class="pregunta">1. ¿Tu personaje es un hombre?</div>
-    <div class="pregunta">2. ¿Tu personaje es una mujer?</div>
-    <div class="pregunta">3. ¿Tu personaje tiene el pelo rubio?</div>
-    <div class="pregunta">4. ¿Tu personaje tiene el pelo oscuro?</div>
-    <div class="pregunta">5. ¿Tu personaje usa gafas?</div>
-    <div class="pregunta">6. ¿Tu personaje lleva gorro/a?</div>
-    <div class="pregunta">7. ¿Tu personaje tiene barba?</div>
-    <div class="pregunta">8. ¿Tu personaje tiene bigote?</div>
-    <div class="pregunta">9. ¿Tu personaje tiene el pelo corto?</div>
-    <div class="pregunta">10. ¿Tu personaje tiene el pelo largo?</div>
+    <div id = seccion-preguntas>
+      <div class="pregunta">
+        1. ¿Tu personaje es un hombre?
+      </div>
+      <div class="pregunta">
+        2. ¿Tu personaje es una mujer?
+      </div>
+      <div class="pregunta">
+        3. ¿Tu personaje tiene el pelo rubio?
+      </div>
+      <div class="pregunta">
+        4. ¿Tu personaje tiene el pelo oscuro?
+      </div>
+      <div class="pregunta">
+        5. ¿Tu personaje usa gafas?
+      </div>
+      <div class="pregunta">
+        6. ¿Tu personaje lleva gorro/a?
+      </div>
+      <div class="pregunta">
+        7. ¿Tu personaje tiene barba?
+      </div>
+      <div class="pregunta">
+        8. ¿Tu personaje tiene bigote?
+      </div>
+      <div class="pregunta">
+        9. ¿Tu personaje tiene el pelo corto?
+      </div>
+      <div class="pregunta">
+        10. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        11. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        12. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        13. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        14. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        15. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        16. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        17. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        18. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        19. ¿Tu personaje tiene el pelo largo?
+      </div>
+      <div class="pregunta">
+        20. ¿Tu personaje tiene el pelo largo?
+      </div>
+    </div>
   </nav>
 
   <div class="main-content">
@@ -129,7 +181,9 @@
       </div>
     </div>
   </div>
-
+  <script src="dom.js"></script>
+  <script src="functions.js"></script>
+  <script src="style.css"></script>
   <script src="script.js"></script>
 </body>
 
